--- a/09-Phenology_plants_and_wildlife.Rmd
+++ b/09-Phenology_plants_and_wildlife.Rmd
@@ -14,16 +14,23 @@ lapply(list.of.packages, require, character.only = TRUE)
 
 ```
 
-Phenopix is an R package which allows the user to extract visual information from time lapse images.  It provides a quantitative daily measure of vegetation phenology at each site (e.g. green-up, senescence, snow cover)
+`phenopix` is an R package which allows the user to extract visual information from time lapse images.  It provides a quantitative daily measure of vegetation phenology at each site (e.g. green-up, senescence, snow cover)
 
 
 The Phenopix package has a five step process:
-  i) a region of interest (ROI) is identified;
-  ii) the red, green, and blue digital numbers from each image in the timeseries is extracted and an index of relative ‘greenness’ is computed and plotted from the digital numbers; 
-  iii) the vegetation indices’ data points are filtered to remove inconsistencies; 
-  iv) a curve is fit to the data and phenophases are determined from the curve; 
-  v) and phenophase uncertainties are calculated.
+
+1. a region of interest (ROI) is identified;
+2. the red, green, and blue digital numbers from each image in the timeseries is extracted and an index of relative ‘greenness’ is computed and plotted from the digital numbers; 
+3. the vegetation indices’ data points are filtered to remove inconsistencies; 
+4. a curve is fit to the data and phenophases are determined from the curve; 
+5. phenophase uncertainties are calculated.
   
 ##  Worked example
 
 Coming soon. Check the [wildCo github page for updates](https://github.com/WildCoLab)
+
+## Further reading 
+
+[Alberton, B. et al. 2017. Introducing digital cameras to monitor plant phenology in the tropics: applications for conservation. Perspect. Ecol. Conserv](https://www.sciencedirect.com/science/article/pii/S2530064417300019)
+
+[Filippa, G. et al. 2017. phenopix: Process Digital Images of a Vegetation Cover. R package version 2.3.1.](https://rdrr.io/rforge/phenopix/)
