--- a/index.Rmd
+++ b/index.Rmd
@@ -9,13 +9,15 @@ bibliography: [book.bib, packages.bib]
 toc-title: "Contents"
 biblio-style: apalike
 link-citations: yes
-github-repo: WildCoLab/WildCo_Data_Analysis
+github-repo: "WildCoLab/WildCo_Data_Analysis"
 description: "This resource is a 'living document' representing useful data exploration and data analysis workflows we use within the WildCo lab, WildCAM network and (hopefully) beyond."
 ---
 
 # Introduction
 
-This guide was made as a way of sharing our research labs collective knowledge on the management, manipulation and analysis of camera trap data.   
+This guide was made as a way of sharing our research labs collective knowledge on the management, manipulation and analysis of camera trap data. 
+
+It was born out of the realization that many analysis frameworks we apply as camera trappers, do not have specific examples which involve camera trap data. Thus we wanted a resource which takes a single data set from raw data to analysis, showing all of the steps in between!
 
 ## What this guide is 
 
@@ -32,7 +34,7 @@ This guide was made as a way of sharing our research labs collective knowledge o
 ## How to use this guide
 
 - Browse the pages from the Table of Contents, or use the search box if you are after something specific
-- If you dont want to use GitHub, you can [download the data](https://www.dropbox.com/sh/fpnsinyn1ml9x28/AAB-Y-glHHRDsiCdmQnVLx7Wa?dl=0) and 'follow-along' cutting and pasting the code
+- If you don't want to use GitHub, you can [download the data](https://www.dropbox.com/sh/fpnsinyn1ml9x28/AAB-Y-glHHRDsiCdmQnVLx7Wa?dl=0) and 'follow-along' cutting and pasting the code
 - Explore addition “Further reading” sections at the end of each section for more information or applied examples of the methods discussed
 
 ## Get in touch
