--- a/07-density.Rmd
+++ b/07-density.Rmd
@@ -5,6 +5,13 @@ editor_options:
 ---
 # Density
 
+BASE THE LECTURE ON THIS
+
+https://conbio.onlinelibrary.wiley.com/doi/epdf/10.1111/cobi.13517 
+
+
+
+
 There is an explosion in the number of frameworks looking to hit what is considered the gold stardard in many ecological surveys - population density information. 
 
 We have plans for some worked examples of these in the pipeline, as a placeholder we point you towards some key material: 
@@ -18,6 +25,25 @@ lapply(list.of.packages, require, character.only = TRUE)
 
 ```
 
+## Spatial count
+Use the unmakred package... NEED A GOOD TUTORIAL
+
+
+## Time to event
+Lots of great exampes in here:
+https://link.springer.com/article/10.1007/s42991-021-00181-8 
+
+## Comparison
+
+
+
+
+
+
+
+
+
+
 **Key resources**
 
 A recent review of unmarked density approaches: [Gilbert, Neil A., et al. "Abundance estimation of unmarked animals based on camera‐trap data." Conservation Biology 35.1 (2021): 88-100](173-181.](https://conbio.onlinelibrary.wiley.com/doi/epdf/10.1111/cobi.13517)
@@ -25,6 +51,8 @@ A recent review of unmarked density approaches: [Gilbert, Neil A., et al. "Abund
 *Analysis frameworks*
 
 - **Spatial capture recapture**: `oSCR` package with [teaching materials](https://sites.google.com/site/spatialcapturerecapture/oscr-package/quick-start) and [recorded workshop videos](https://www.youtube.com/channel/UCc87aAzhX7EUOalyCohzqsQ/featured) 
+Good if individuals are individually recognisable
+
 
 - **N-Mixture models** [Keever, A. C., et al. "Efficacy of N-mixture models for surveying and monitoring white-tailed deer populations." Mammal Research 62.4 (2017)](https://link.springer.com/article/10.1007/s13364-017-0319-z)
 
